# ifj-project-compiler

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md  ahoj.swift  builtin.c  builtin.h  builtin.ifj23  error.c  error.h  exp_parser.c  exp_parser.h  frfrgrammar  generator.c  generator.h  grammar-pepik-verze-its-over  heh  ifj.g4  main.c  parser.c  parser.h  scanner  scanner.c  scanner.h  stack.c  stack.h  str.c  str.h  symtable.c  symtable.h  test.swift  yepyep
.antlr/: ifj.interp  ifjBaseListener.java  ifjLexer.interp  ifjLexer.java  ifjLexer.tokens  ifjListener.java  ifjParser.java
.github/workflows/: gtest.yml  main.yml  makefile.yml
discord_tests/: test.sh
discord_tests/input/: bogus_func.swift  escape_ord.swift  example_cycles.swift  example_moc_hard.swift  if_let_shadowing.swift  substring_oob.swift
docs/: fit-grammar  grammar  grammar-ez-acko
nerd/: ifj.interp  ifjBaseListener.java  ifjLexer.interp  ifjLexer.java  ifjLexer.tokens  ifjListener.java  ifjParser.java
tests/: exp_parser.c  exp_parser.cpp  generator.cpp  parser.cpp  scanner  scanner.cpp  stack.cpp  str.cpp  symtable.cpp  test.swift  test_utils.cpp
